--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 		"installer-name": "UnifiedTaskOverview"
 	},
 	"require": {
-		"composer/installers": "~1.0",
+		"composer/installers": "~1.0|~2",
 		"mwstake/mediawiki-component-manifestregistry": "~2"
 	},
 	"require-dev": {
