--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-*~
-*.kate-swp
-*.swp
-node_modules/**
-vendor/**
-
-composer.lock
-composer.phar
+/composer.lock
+/vendor
+/node_modules
+.eslintcache
