build: Updating eslint-config-wikimedia to 0.29.1
The following rules are failing and were disabled:
* no-jquery/no-done-fail

Additional changes:
* eslint: Dropped the empty global definition.

Change-Id: Ib35da1a580e0dcb1fbc818f3ffcef67d19504d60

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,8 @@
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
-	"globals": {},
 	"rules": {
-		"no-implicit-globals": "off"
+		"no-implicit-globals": "off",
+		"no-jquery/no-done-fail": "warn"
 	}
 }
